# WxFunny

./: CMakeLists.txt
Spider/: main.py  spider_config.py  spider_sina.py  spider_tool.py  spider_url.py  spider_vedio.py
WxPublic/: wx_write_page.py
WxPublic/wxapi/: auth.py  getdata.py  message.py  wechat.py
